Java FX refactor
Co-authored-by: aryeh-bloom <aryeh-bloom@users.noreply.github.com>